--- a/www/registro.html
+++ b/www/registro.html
@@ -87,7 +87,7 @@
             </div>
             
             <div class="form-group">
-                <div class="success-message" id="registerSuccess">¡Registro exitoso! Serás redirigido a la biblioteca</div>
+                <div class="success-message" id="registerSuccess">¡Registro exitoso! Serás redirigido al inicio de sesión</div>
             </div>
             
             <button class="submit-btn" id="registerBtn">Registrarse</button>
